# Invoker

./: CMakeLists.txt  Invoker.rc  README.md  build.bat
.github/workflows/: cmake.yml
src/: main.c  static.h  stdafx.h  tray.h
